# clicking-circles-player

./: .gitignore  README.md  auto-tag.sh  convert.py  genfilelist.py
.github/workflows/: docker-play-web.yml  docker.yml  flatpak.yml
RealmHashExtractor/: Program.cs  RealmHashExtractor.csproj  RealmHashExtractor.sln
RealmHashExtractor/LazerSchema/: Beatmap.cs  BeatmapCollection.cs  BeatmapDifficulty.cs  BeatmapMetadata.cs  BeatmapSet.cs  BeatmapUserSettings.cs  RealmFile.cs  RealmNamedFileUsage.cs  RealmUser.cs  Ruleset.cs
archive/: play.py
play/: .gitignore  Cargo.toml
play-web/: Dockerfile  README.md  docker-compose.yml  nginx.conf  package.json  pnpm-lock.yaml
play-web/backend/: .dockerignore  Dockerfile  main.py  requirements.txt
play-web/frontend/: .dockerignore  .gitignore  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
play-web/frontend/public/: manifest.json
play-web/frontend/src/: config.ts
play-web/frontend/src/app/: globals.css  layout.tsx  page.tsx
play-web/frontend/src/components/: Player.tsx  Search.tsx  SongList.tsx
play-web/frontend/src/context/: PlayerContext.tsx
play-web/frontend/src/services/: AudioService.ts
play-web/frontend/src/types/: song.ts
play/build-aux/: moe.taoky.clicking-circles-player.desktop  moe.taoky.clicking-circles-player.yaml  mpv.json
play/src/: main.rs
