[package]
name = "play"
version = "0.1.0"
edition = "2021"

[features]
default = ["chafa"]
chafa = ["ratatui-image/chafa"]

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
crossterm = "0.27.0"
image = "0.25.1"
keepawake = "0.5.1"
libmpv-sirno = "=2.0.2-fork.1"
rand = "0.8.5"
ratatui = "0.27"
ratatui-image = { git = "https://github.com/taoky/ratatui-image.git", rev = "22bd0046d7e4ffdebe17e53141f727fefa3ecfc4" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
souvlaki = { git = "https://github.com/taoky/souvlaki.git", rev = "69ba3372c04ae9e83b713d3dc8cc6492c7bcc0c1", default-features = false, features = ["use_zbus"] }
tui-input = "0.8.0"
url = "2.5.2"
xdg = "2.5.2"

[profile.release]
lto = false
