[package]
name = "play"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
crossterm = "0.27.0"
image = "0.25.1"
keepawake = { git = "https://github.com/taoky/keepawake-rs", rev = "c34f8cbf161c519e7a682511c67c0860de9f48b6" }
libmpv-sirno = "=2.0.2-fork.1"
rand = "0.8.5"
ratatui = "0.30.0"
ratatui-image = "10.0.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
souvlaki = { git = "https://github.com/taoky/souvlaki.git", rev = "62b8caaac62b214f743b566c239bb78811d460e5", default-features = false, features = ["use_zbus"] }
tui-input = "0.8.0"
url = "2.5.2"
xdg = "2.5.2"

[profile.release]
lto = false
